pxc/tests/test_19_thread/chkmt4.px

namespace chkmt1;
import test_common "";

multithreaded struct foo(ptr{int} p) { // error
}
// ARGUABLE
// non-mt types are allowed for function/constr args?

